# Fitflex_01

./: .gitignore  .replit  README.md  firebase-applet-config.json  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  replit.md  vercel.json  vite.config.ts
api/: index.py
attached_assets/: Pasted--chat-Perfect-Let-me-lock-in-these-decisions-so-I-can-b_1776722998456.txt  Pasted-Here-is-the-complete-extended-Master-Prompt-with-all-ad_1776791357339.txt  Pasted-Here-s-your-clean-copy-paste-ready-Replit-Master-Prompt_1776723357012.txt  Pasted-Here-s-your-clean-copy-paste-ready-Replit-Master-Prompt_1776723576969.txt  Pasted-You-are-implementing-a-structured-refactor-of-an-existi_1777585576414.txt  Pasted-import-cv2-import-mediapipe-as-mp-import-numpy-as-np-im_1776789817913.txt
backend/: config.py  database.py  main.py  mediapipe_engine.py  one_euro_filter.py  requirements.txt  session_manager.py
backend/data/: sessions.db
backend/exercises/: __init__.py  base.py  bicep_curl.py  deadlift.py  lat_pulldown.py  plank.py  shoulder_press.py  squat.py
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src/components/: ErrorAlert.tsx  ExerciseLabel.tsx  FormGauge.tsx  Layout.tsx  NavBar.tsx  Navigation.tsx  RepCounter.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useAudioFeedback.ts  usePoseTracker.ts  useWebSocket.ts  useWorkoutHistory.ts  useWorkoutTracking.ts
src/lib/: RepCounter.ts  api.ts  audioFeedback.ts  exercises.ts  poseDraw.ts
src/pages/: Dashboard.tsx  History.tsx  WorkoutSession.tsx
src/screens/: Analytics.tsx  (+11 more)
(+4 files in other folders)
